@@ -29,6 +29,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #27758: Fix possible integer overflow in the _csv module for large record
+  lengths.
+
 - Issue #23369: Fixed possible integer overflow in
   _json.encode_basestring_ascii.
 
